--- a/Qomolangma/Qomolangma/Classes/Mine/Others/MineInformatiom.plist
+++ b/Qomolangma/Qomolangma/Classes/Mine/Others/MineInformatiom.plist
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   MineInformatiom.plist
-   Qomolangma
-
-   Created by Aioria on 2017/3/15.
-   Copyright (c) 2017年 Focus. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<array>
+	<array>
+		<dict>
+			<key>icon</key>
+			<string>0001.png</string>
+			<key>name</key>
+			<string>我的勋章</string>
+		</dict>
+	</array>
+	<array/>
+	<array/>
+	<array/>
+	<array/>
+	<array/>
+	<array/>
+</array>
 </plist>
