简单的界面布局

--- a/Qomolangma/Qomolangma/Classes/Mine/Others/MineInformatiom.plist
+++ b/Qomolangma/Qomolangma/Classes/Mine/Others/MineInformatiom.plist
@@ -5,16 +5,120 @@
 	<array>
 		<dict>
 			<key>icon</key>
-			<string>0001.png</string>
+			<string>icon_001</string>
 			<key>name</key>
 			<string>我的勋章</string>
+			<key>detail</key>
+			<string></string>
 		</dict>
 	</array>
-	<array/>
-	<array/>
-	<array/>
-	<array/>
-	<array/>
-	<array/>
+	<array>
+		<dict>
+			<key>icon</key>
+			<string>icon_002</string>
+			<key>name</key>
+			<string>学习小组</string>
+			<key>detail</key>
+			<string></string>
+		</dict>
+	</array>
+	<array>
+		<dict>
+			<key>icon</key>
+			<string>icon_003</string>
+			<key>name</key>
+			<string>消息中心</string>
+			<key>detail</key>
+			<string></string>
+		</dict>
+	</array>
+	<array>
+		<dict>
+			<key>icon</key>
+			<string>icon_004</string>
+			<key>name</key>
+			<string>文章笔记</string>
+			<key>detail</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>icon</key>
+			<string>icon_005</string>
+			<key>name</key>
+			<string>专栏留言</string>
+			<key>detail</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>icon</key>
+			<string>icon_006</string>
+			<key>name</key>
+			<string>已下载音频</string>
+			<key>detail</key>
+			<string>0</string>
+		</dict>
+		<dict>
+			<key>icon</key>
+			<string>icon_007</string>
+			<key>name</key>
+			<string>我赞过的</string>
+			<key>detail</key>
+			<string>0</string>
+		</dict>
+	</array>
+	<array>
+		<dict>
+			<key>isOrange</key>
+			<true/>
+			<key>icon</key>
+			<string>icon_008</string>
+			<key>name</key>
+			<string>账户余额</string>
+			<key>detail</key>
+			<string>0.00</string>
+		</dict>
+		<dict>
+			<key>icon</key>
+			<string>icon_009</string>
+			<key>name</key>
+			<string>兑换码</string>
+			<key>detail</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>icon</key>
+			<string>icon_010</string>
+			<key>name</key>
+			<string>购买记录</string>
+			<key>detail</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>icon</key>
+			<string>icon_011</string>
+			<key>name</key>
+			<string>购物车</string>
+			<key>detail</key>
+			<string>0</string>
+		</dict>
+	</array>
+	<array>
+		<dict>
+			<key>icon</key>
+			<string>icon_012</string>
+			<key>name</key>
+			<string>账号</string>
+			<key>detail</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>icon</key>
+			<string>icon_013</string>
+			<key>name</key>
+			<string>设置</string>
+			<key>detail</key>
+			<string></string>
+		</dict>
+	</array>
 </array>
 </plist>
